updated tagline to match new slogan

--- a/web/views/root.erb
+++ b/web/views/root.erb
@@ -16,8 +16,9 @@
       </div>
     </nav>
     <div class="bottom-page container">
-      <h1 class="py-3">
-        The Levvel CLI is designed to help you be the best developer we can help you be.
+      <h1 class="py-3 d-block d-xl-flex flex-direction-left">
+        <div>You&apos;re awesome.  Let&apos;s get even better.  It&apos;s time to</div>
+        <pre class="code ml-0 ml-xl-3 mt-1 px-2">$ lvl up</pre>
       </h1>
       <%= @text %>
     </div>
