--- a/web/views/root.erb
+++ b/web/views/root.erb
@@ -16,9 +16,10 @@
       </div>
     </nav>
     <div class="bottom-page container">
-      <h1 class="py-3 d-block d-xl-flex flex-direction-left">
-        <div>You&apos;re awesome.  Let&apos;s get even better.  It&apos;s time to</div>
-        <pre class="code ml-0 ml-xl-3 mt-1 px-2">$ lvl up</pre>
+      <h1 class="d-flex align-items-center my-4">
+        <div>
+          You&apos;re awesome.  Let&apos;s get even better.  It&apos;s time to <pre class="slogan-code ml-2 px-1">$ lvl up</pre>
+        </div>
       </h1>
       <%= @text %>
     </div>
@@ -29,7 +30,25 @@
         <span class="navbar-brand">
           <img class="footer-logo" src="blue_accent_logo.png" />
         </span>
-        <span>Made with ❤️ by&nbsp;<a href="https://levvel.io">levvel.io</a></span>
+        <span>Made with ❤️ by&nbsp;<a href="https://www.levvel.io">levvel.io</a>
+          <svg class="bottom-logo" width="30px" height="30px" viewBox="0 0 75 75" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 55 (78076) - https://sketchapp.com -->
+                  <title>badge</title>
+                  <desc>Created with Sketch.</desc>
+                    <g id="badge" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                      <g id="levvel-badge">
+                        <path d="M37.5,75 C58.2106781,75 75,58.2106781 75,37.5 C75,16.7893219 58.2106781,0 37.5,0 C16.7893219,0 0,16.7893219 0,37.5 C0,58.2106781 16.7893219,75 37.5,75 Z" id="Oval-1" fill="#184C64"></path>
+                        <g id="mark/mint" transform="translate(16.000000, 21.000000)">
+                          <g id="levvel-mark-mint">
+                            <polygon id="V" fill="#E16245" fill-rule="nonzero" points="36.7610504 5.68434189e-14 26.0248108 22.0906941 26.0189643 22.0797567 19.2128626 35.9600003 25.9838731 35.9600003 43.0184619 5.68434189e-14"></polygon>
+                            <polygon id="V" fill="#E16245" fill-rule="nonzero" points="8.68000007 3.55271368e-15 17.1692309 17.6563014 20.5978957 11.3872779 14.9186337 3.55271368e-15"></polygon>
+                            <polyline id="V" fill="#A8D1BF" points="34.3384618 0 17.3038731 35.9600003 0 0 6.25741145 0 17.2537906 22.0687593 28.0810504 0 34.3384618 0"></polyline>
+                          </g>
+                      </g>
+                  </g>
+              </g>
+            </svg>
+        </span>
       </div>
     </nav>
   </body>
